YAML/YAML_Openshift_Console/namespaces-serviceaccouns-clusterrolebindings.yml
---
kind: Namespace
apiVersion: v1
metadata:
  name: openshift-console
---
kind: Namespace
apiVersion: v1
metadata:
  name: openshift-console-user-settings
